--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ exceptiongroup==1.2.0
 filelock==3.13.1
 Flask==3.0.2
 Flask-SQLAlchemy==3.1.1
+Frozen-Flask==1.0.2
 h11==0.14.0
 idna==3.6
 importlib_metadata==7.0.2
