--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,3 @@
 [build]
-  command = "python app.py"
+  command = "bash setup.sh && python app.py"
   publish = "converted"
-  environment = { PYTHON_VERSION = "3.8" }
