updated build command 2

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,4 @@
 [build]
-  command = "pip install -r requirements.txt && python app.py"
+  command = "source $HOME/.python_venv/myenv/bin/activate && pip install -r requirements.txt && python app.py"
   publish = "converted"
+  environment = { PYTHON_VERSION = "3.8" }
