--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,7 @@
 [build]
   command = "pip install -r requirements.txt && gunicorn -b 0.0.0.0:$PORT app:app"
   publish = "converted"
-  environment = { PYTHON_VERSION = "3.8" }
+
+[build.environment]
+  PYTHON_VERSION = "3.8"
+  PORT = "8000"
