--- a/.render.yaml
+++ b/.render.yaml
@@ -2,7 +2,10 @@ services:
   - type: web
     name: my-flask-app
     env: python
-    buildCommand: "apt-get update && apt-get install -y build-essential && pip install -r requirements.txt"
+    buildCommand: |
+      apt-get update && \
+      apt-get install -y build-essential libatlas-base-dev gfortran python3-dev && \
+      pip install -r requirements.txt
     startCommand: "gunicorn -b 0.0.0.0:10000 app:app"
     envVars:
       - key: FLASK_ENV
