--- a/.render.yaml
+++ b/.render.yaml
@@ -1,12 +1,8 @@
 services:
   - type: web
     name: my-flask-app
-    env: python
-    buildCommand: |
-      apt-get update && \
-      apt-get install -y build-essential libatlas-base-dev gfortran python3-dev && \
-      pip install -r requirements.txt
-    startCommand: "gunicorn -b 0.0.0.0:10000 app:app"
+    env: docker
+    dockerfilePath: Dockerfile
     envVars:
       - key: FLASK_ENV
         value: production
